[package]
name = "fast-web-server-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.54"
quote = {version = "1.0.26"}
syn = {version = "2.0.12", features = ["full", "extra-traits", ]}
#syn = {version = "1", features = ["full", "extra-traits", ]}
fast-web-server-types = {path = "../fast-web-server-types"}

